@@ -99,6 +99,8 @@ x - 1
 [x - 1, 1]
 x^6 + 21*x^4 + 116*x^2 + 64
 x^6 + 21*x^4 + 116*x^2 + 64
+x^2 - x - 16
+x^2 - x - 16
 [x^8 - x^6 + x^4 - x^2 + 1, [101, 2, 10201], [7607, 567, 5596, 6117, 2594, 9
 634, 4605, 4084], [2678, 1546, 2875, 8203, 2678, 1546, 2875, 8203; 9382, 964
 6, 819, 555, 819, 555, 9382, 9646; 197, 6657, 10004, 3544, 197, 6657, 10004,
@@ -126,4 +128,4 @@ x^6 + 21*x^4 + 116*x^2 + 64
 2 + z*x + 1/3*z^2, x^2 + 1/3*z^2]], [z^6 + 108, Mod(x, x^6 + 108), [x - z, x
  + (-1/12*z^4 + 1/2*z), x + (1/12*z^4 + 1/2*z), x + (-1/12*z^4 - 1/2*z), x +
  (1/12*z^4 - 1/2*z), x + z]]]
-Total time spent: 1388
+Total time spent: 1858
