@@ -76,6 +76,11 @@ galoissubcyclo(1,1,1)
 galoissubcyclo(1,1,2)
 galoissubcyclo(znstar(124),[3,0;0,2])
 galoissubcyclo(znstar(124,1),[3,0;0,2])
+\\#2232
+G=bnrinit(bnfinit(a),[65,[0]]); L=subgrouplist(G,[2]);
+galoissubcyclo(G,L[1])
+G=bnrinit(bnfinit(a),[65,[0]], 1); \\ include generators
+galoissubcyclo(G,L[1])
 
 G=galoisinit(polcyclo(20))
 galoissubfields(G)
